# ai-data-agent-benchmark-lab

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task_proposal.yml
.github/workflows/: secret-scan.yml  test.yml  update-leaderboard.yml  validate-task.yml
agents/anthropic_agent/: README.md
agents/baseline_agent/: README.md  __init__.py
agents/crewai_agent/: README.md
agents/custom_agent_template/: README.md  template_agent.py
agents/gemini_agent/: README.md
agents/langchain_agent/: README.md
agents/langgraph_agent/: README.md
agents/local_llm_agent/: README.md
agents/openai_agent/: README.md
arena/: README.md  agent.py  cli.py  config.py  leaderboard.py  runner.py  schema.py  scoring.py  task_loader.py
assets/: README.md
connectors/bigquery_mock/: README.md
connectors/csv/: README.md
connectors/databricks_mock/: README.md
connectors/duckdb/: README.md  __init__.py
connectors/parquet/: README.md
connectors/pdf/: README.md
docs/: README.md  architecture.md  dataset-policy.md  scoring-methodology.md
evaluators/: README.md  final_score.py  sql_evaluator.py
examples/: README.md
leaderboard/: README.md  leaderboard.md  leaderboard_generator.py  results.json
tests/: README.md  test_duckdb_connector.py  test_leaderboard.py  test_runner.py  test_sql_evaluator.py  test_task_loader.py
(+41 files in other folders)
