[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-data-agent-benchmark-lab"
version = "0.1.0"
description = "The open benchmark lab for testing AI agents on real-world data engineering and analytics workflows."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Harshit Tripathi" }
]
keywords = ["ai-agents", "benchmark", "data-engineering", "sql", "pyspark", "dbt", "rag", "evaluation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[project.scripts]
arena = "arena.cli:app"

[tool.setuptools.packages.find]
include = ["arena*", "agents*", "connectors*", "evaluators*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["arena"]
